Adição dos servlets do CRUD de fábricas/endereços; Correção/adaptação de código pós teste; NÃO REVISADO