@@ -2,68 +2,66 @@ package com.model;
 
 //tabela: Endereco
 public class Endereco {
-//    Atributos
-    private Integer id; // coluna: id
-    private String cep; // coluna: cep
-    private Integer numero; // coluna: numero
-    private String rua; // coluna: rua
-    private String complemento; //coluna: complemento
+  //    Atributos
+  private Integer id; // coluna: id
+  private String cep; // coluna: cep
+  private int numero; // coluna: numero
+  private String rua; // coluna: rua
+  private String complemento; //coluna: complemento
 
-//    Construtor
-    public Endereco(Integer id, String cep, Integer numero, String rua, String complemento){
-        this.id = id;
-        this.cep = cep;
-        this.numero = numero;
-        this.rua = rua;
-        this.complemento = complemento;
-    }
+  // Construtor
+  public Endereco(Integer id, String cep, int numero, String rua, String complemento) {
+    this.id = id;
+    this.cep = cep;
+    this.numero = numero;
+    this.rua = rua;
+    this.complemento = complemento;
+  }
 
-//    toString
-    public String toString(){
-        return String.format("ID: %s\nCEP: %s\nNúmero: %d\nRua: %s\nComplemento: %s\n", this.id, this.cep, this.numero, this.rua, this.complemento);
-    }
+  // toString
+  public String toString() {
+    String complemento = this.complemento == null ? "" : " - " + this.complemento;
+    return "%s, nº %d %s".formatted(rua, numero, complemento);
+  }
 
-//    Getters
+  // Getters e Setters
+  public Integer getId() {
+    return id;
+  }
 
-    public Integer getId() {
-        return id;
-    }
+  public void setId(Integer id) {
+    this.id = id;
+  }
 
-    public String getCep() {
-        return cep;
-    }
+  public String getCep() {
+    return cep;
+  }
 
-    public Integer getNumero() {
-        return numero;
-    }
+  public void setCep(String cep) {
+    this.cep = cep;
+  }
 
-    public String getRua() {
-        return rua;
-    }
+  public int getNumero() {
+    return numero;
+  }
 
-    public String getComplemento() {
-        return complemento;
-    }
+  public void setNumero(int numero) {
+    this.numero = numero;
+  }
 
-//    Setters
+  public String getRua() {
+    return rua;
+  }
 
-    public void setId(Integer id) {
-        this.id = id;
-    }
+  public void setRua(String rua) {
+    this.rua = rua;
+  }
 
-    public void setCep(String cep) {
-        this.cep = cep;
-    }
+  public String getComplemento() {
+    return complemento;
+  }
 
-    public void setNumero(int numero) {
-        this.numero = numero;
-    }
-
-    public void setRua(String rua) {
-        this.rua = rua;
-    }
-
-    public void setComplemento(String complemento) {
-        this.complemento = complemento;
-    }
+  public void setComplemento(String complemento) {
+    this.complemento = complemento;
+  }
 }
